# childflow

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  mise.toml  rootful-smoke.pcapng  rootless-smoke.pcapng
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  demo-test.yml  publish-crates.yml  release.yml
docker/demo/: Dockerfile  README.md  compose.yml  create-self-signed-cert.sh  origin_server.py  proxy_server.py  render-gif.sh  run-demo.sh  wait-for-port.sh
docker/dev/: Dockerfile  LOAD_TESTING.md  README.md  compose.yml  load-test.sh  summarize-load-test.sh
docker/e2e/: README.md  compose.yml  run-e2e.sh
docs/: doctor-schema.md  flow-log-schema.md  observability-schema.md  profile-schema.md  report-schema.md  summary-schema.md  technical-details.md
src/: app.rs  capture.rs  cgroup.rs  cli.rs  dns.rs  doctor.rs  domain.rs  flow_log.rs  hosts.rs  linux_net.rs  main.rs  namespace.rs  net.rs  observability.rs  parent_runtime.rs  preflight.rs  profile.rs  report.rs  runtime_failure.rs  sandbox.rs  summary.rs  tproxy.rs  util.rs
src/app/: mod.rs
src/capture/: mod.rs  rewrite.rs  tests.rs  writer.rs
src/cli/: args.rs  merge.rs  mod.rs  types.rs  validate.rs
src/dns/: forwarder.rs  mod.rs  plan.rs  tests.rs
src/doctor/: capabilities.rs  json.rs  mod.rs  tests.rs
src/flow_log/: mod.rs  tests.rs  values.rs
src/namespace/: diagnostics.rs  exec.rs  mod.rs  mounts.rs  rootless_network.rs  tests.rs  userns.rs
src/network/: mod.rs  rootful.rs  rootless_internal.rs  types.rs
src/preflight/: inspect.rs  mod.rs  tests.rs
src/profile/: load.rs  mod.rs  path.rs  serde_impl.rs  tests.rs
src/proxy/: env.rs  mod.rs  rootful_tproxy.rs  rootless_connect.rs  rootless_relay.rs  types.rs
src/report/: aggregate.rs  mod.rs
src/sandbox/: mod.rs  network.rs  policy.rs  reason.rs  tests.rs
src/summary/: build.rs  json.rs  mod.rs  text.rs  types.rs
src/tproxy/: connect.rs  lifecycle.rs  listener.rs  mod.rs  (+3 more)
tests/: rootless_proxy.rs
(+186 files in other folders)
