[package]
name = "childflow"
version = "0.2.0"
description = "Forces DNS/proxy/interface for a child process tree and captures only its packets"
readme = "README.md"
repository = "https://github.com/blacknon/childflow"
license = "MIT"
edition = "2021"
rust-version = "1.85"
keywords = ["cli", "linux", "namespace", "network", "pcap"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
etherparse = "0.15"
nix = { version = "0.31.2", features = [
    "mount",
    "process",
    "sched",
    "signal",
    "fs",
] }
openssl = "0.10"
pcap-file = "2"
pnet_datalink = "0.35.0"
socket2 = { version = "0.6.3", features = ["all"] }
