[package]
name = "childflow"
version = "0.8.0"
edition = "2021"
license = "MIT"
description = "A per-command-tree network sandbox for Linux"
repository = "https://github.com/blacknon/childflow"
homepage = "https://github.com/blacknon/childflow"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
etherparse = "0.15"
ipnetwork = { version = "0.20", features = ["serde"] }
nix = { version = "0.31.2", features = [
    "mount",
    "process",
    "sched",
    "signal",
    "fs",
] }
openssl = "0.10"
pcap-file = "2"
pnet_datalink = "0.35.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
socket2 = { version = "0.6.3", features = ["all"] }
toml = "0.8"
